# storageManagementTestProject

./: .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  req.txt
src/: main.py
src/adapters/orm_engine/: models.py  sql_alchemy.py
src/adapters/repositories/: sqlalchemy_order_repository.py  sqlalchemy_ordertItem_repository.py  sqlalchemy_product_repository.py
src/api/: schemas.py  v1_router.py
src/api/depends/: database_depends.py  use_case_depends.py
src/api/v1/: order_router.py  product_router.py
src/core/: exceptions.py
src/data_classes/: order_product_dataclass.py
src/migrations/: env.py
src/migrations/versions/: 9adc2bbc3093_updated_order_relation_3.py  9fbc98436a9f_added_count_for_orderitem.py  b066bae69f9d_updated_order_relation.py  b2446e57241c_updated_order_relation_2.py  b82f791ca21a_first_migration.py
src/ports/repositories/: orderItem_rep.py  order_rep.py  product_rep.py
src/tests/unit_tests/: conftest.py  test_product.py
src/tests/unit_tests/in_memory_repositories/: in_memory_database.py
src/use_case/: orderItem_use_case.py  order_usecase.py  product_usecase.py
